# clipipe

./: Cargo.toml  LICENSE  README.md  lazy.lua
.github/workflows/: release.yml  workflow.yml
examples/: mock.rs
lua/: .luarc.json
lua/clipipe/: init.lua
src/: clipboard.rs  linux.rs  main.rs  windows.rs
tests/: basic.lua  clipipe-test.rs  harness.lua  neovim-test.rs  paste_timeout.lua  startup_timeout.lua
