[package]
name = "clipipe"
version = "0.2.3"
edition = "2024"
authors = ["Brian Koropoff <bkoropoff@gmail.com>"]
description = "A persistent clipboard provider for Neovim"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bkoropoff/clipipe"

[dependencies]
serde_json = "1"

[dev-dependencies]
rstest = "0.26"
rstest_reuse = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9"
x11-clipboard = "0.9"
